<package format="3">
  <name>jsk_topic_tools</name>
  <version>2.0.3</version>
  <description>jsk_topic_tools</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="furuta@jsk.t.u-tokyo.ac.jp">Yusuke Furuta</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_topic_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="furuta@jsk.t.u-tokyo.ac.jp">Yusuke Furuta</author>

  <!-- list depends in alphabetical order -->
  <!-- <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamic_tf_publisher</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_tutorials</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rosnode</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend> -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
