<package format="3">
  <name>jsk_footstep_msgs</name>
  <version>2.0.0</version>
  <description>jsk_footstep_msgs</description>
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_footstep_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
