<package format="3">
  <name>jsk_hark_msgs</name>
  <version>2.0.0</version>
  <description>jsk_hark_msgs</description>
  <maintainer email="s-fujii@jsk.t.u-tokyo.ac.jp">Shohei Fujii</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_hark_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="s-fujii@jsk.t.u-tokyo.ac.jp">Shohei Fujii</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
