<package format="3">
  <name>posedetection_msgs</name>
  <version>2.0.0</version>
  <description>posedetection_msgs provides messages and services to facilitate passing pose detection results and features.</description>
  <!-- <maintainer>Rosen Diankov</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/posedetection_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Rosen Diankov</author>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
