<package>
  <name>jsk_interactive</name>
  <version>2.1.7</version>
  <description>jsk_interactive</description>
  <maintainer email="furua@jsk.imi.i.u-tokyo.ac.jp">Yusuke Furuta</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_interactive</url>

  <author>Yusuke Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mk</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>dynamic_tf_publisher</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>jsk_interactive_marker</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>dynamic_tf_publisher</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>jsk_interactive_marker</run_depend>

  <!-- <test_depend>mk</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>interactive_marker_helpers</test_depend> -->
  <!-- <test_depend>arm_navigation_msgs</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>dynamic_tf_publisher</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>jsk_interactive_marker</test_depend> -->

  <export>

  </export>
</package>
