<package>
  <name>
    jsk_interactive_marker
  </name>
  <description>
    jsk interactive markers
  </description>
  <version>1.0.10</version>
  <author email="furuta@jsk.t.u-tokyo.ac.jp">furuta</author>
  <maintainer email="furuta@jsk.t.u-tokyo.ac.jp">furuta</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/interactive_marker</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mk</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_tf_publisher</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>jsk_footstep_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>jsk_pcl_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>geometry</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>message_filters</build_depend>
  <run_depend>roseus</run_depend>
  <run_depend>tinyxml</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamic_tf_publisher</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>jsk_footstep_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>jsk_pcl_ros</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>geometry</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_filters</run_depend>
  <build_depend>jsk_topic_tools</build_depend>
  <run_depend>jsk_topic_tools</run_depend>
</package>


