<package>
  <name>jsk_interactive_test</name>
  <version>2.1.7</version>
  <description>jsk_interactive_test</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jsk_interactive_test</url>

  <author>Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mk</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>jsk_interactive</build_depend>
  <build_depend>jsk_interactive_marker</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>jsk_interactive</run_depend>
  <run_depend>jsk_interactive_marker</run_depend>
  <!-- <test_depend>mk</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->

  <export>

  </export>
</package>
